patito/gen/patito_parser.go
// Code generated from Patito.g4 by ANTLR 4.9.3. DO NOT EDIT.

package gen // Patito
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'program'", "'main'", "'end'", "'vars'", "'void'", "'print'", "'if'",
	"'else'", "'while'", "'do'", "'int'", "'float'", "", "'='", "'+'", "'-'",
	"'*'", "'/'", "','", "';'", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'",
}
var symbolicNames = []string{
	"", "PROGRAM", "MAIN", "END", "VARS", "VOID", "PRINT", "IF", "ELSE", "WHILE",
	"DO", "INT_KW", "FLOAT_KW", "RELOP", "ASSIGN", "PLUS", "MINUS", "MULT",
	"DIV", "COMMA", "SEMI", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE",
	"LBRACKET", "RBRACKET", "ID", "INT_LIT", "FLOAT_LIT", "STRING_LIT", "WS",
}

var ruleNames = []string{
	"program", "varsOpt", "funcsOpt", "varsDecl", "varGroup", "idList", "typeSpec",
	"body", "statement", "assign", "printStmt", "printArgs", "condition", "cycle",
	"expr", "sign", "literal", "funcDecl", "paramListOpt", "paramList", "param",
	"fcall", "argListOpt", "argList",
}

type PatitoParser struct {
	*antlr.BaseParser
}

// NewPatitoParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *PatitoParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewPatitoParser(input antlr.TokenStream) *PatitoParser {
	this := new(PatitoParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Patito.g4"

	return this
}

// PatitoParser tokens.
const (
	PatitoParserEOF        = antlr.TokenEOF
	PatitoParserPROGRAM    = 1
	PatitoParserMAIN       = 2
	PatitoParserEND        = 3
	PatitoParserVARS       = 4
	PatitoParserVOID       = 5
	PatitoParserPRINT      = 6
	PatitoParserIF         = 7
	PatitoParserELSE       = 8
	PatitoParserWHILE      = 9
	PatitoParserDO         = 10
	PatitoParserINT_KW     = 11
	PatitoParserFLOAT_KW   = 12
	PatitoParserRELOP      = 13
	PatitoParserASSIGN     = 14
	PatitoParserPLUS       = 15
	PatitoParserMINUS      = 16
	PatitoParserMULT       = 17
	PatitoParserDIV        = 18
	PatitoParserCOMMA      = 19
	PatitoParserSEMI       = 20
	PatitoParserCOLON      = 21
	PatitoParserLPAREN     = 22
	PatitoParserRPAREN     = 23
	PatitoParserLBRACE     = 24
	PatitoParserRBRACE     = 25
	PatitoParserLBRACKET   = 26
	PatitoParserRBRACKET   = 27
	PatitoParserID         = 28
	PatitoParserINT_LIT    = 29
	PatitoParserFLOAT_LIT  = 30
	PatitoParserSTRING_LIT = 31
	PatitoParserWS         = 32
)

// PatitoParser rules.
const (
	PatitoParserRULE_program      = 0
	PatitoParserRULE_varsOpt      = 1
	PatitoParserRULE_funcsOpt     = 2
	PatitoParserRULE_varsDecl     = 3
	PatitoParserRULE_varGroup     = 4
	PatitoParserRULE_idList       = 5
	PatitoParserRULE_typeSpec     = 6
	PatitoParserRULE_body         = 7
	PatitoParserRULE_statement    = 8
	PatitoParserRULE_assign       = 9
	PatitoParserRULE_printStmt    = 10
	PatitoParserRULE_printArgs    = 11
	PatitoParserRULE_condition    = 12
	PatitoParserRULE_cycle        = 13
	PatitoParserRULE_expr         = 14
	PatitoParserRULE_sign         = 15
	PatitoParserRULE_literal      = 16
	PatitoParserRULE_funcDecl     = 17
	PatitoParserRULE_paramListOpt = 18
	PatitoParserRULE_paramList    = 19
	PatitoParserRULE_param        = 20
	PatitoParserRULE_fcall        = 21
	PatitoParserRULE_argListOpt   = 22
	PatitoParserRULE_argList      = 23
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) PROGRAM() antlr.TerminalNode {
	return s.GetToken(PatitoParserPROGRAM, 0)
}

func (s *ProgramContext) ID() antlr.TerminalNode {
	return s.GetToken(PatitoParserID, 0)
}

func (s *ProgramContext) SEMI() antlr.TerminalNode {
	return s.GetToken(PatitoParserSEMI, 0)
}

func (s *ProgramContext) VarsOpt() IVarsOptContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarsOptContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarsOptContext)
}

func (s *ProgramContext) FuncsOpt() IFuncsOptContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncsOptContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncsOptContext)
}

func (s *ProgramContext) MAIN() antlr.TerminalNode {
	return s.GetToken(PatitoParserMAIN, 0)
}

func (s *ProgramContext) Body() IBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *ProgramContext) END() antlr.TerminalNode {
	return s.GetToken(PatitoParserEND, 0)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(PatitoParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PatitoParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(PatitoParserPROGRAM)
	}
	{
		p.SetState(49)
		p.Match(PatitoParserID)
	}
	{
		p.SetState(50)
		p.Match(PatitoParserSEMI)
	}
	{
		p.SetState(51)
		p.VarsOpt()
	}
	{
		p.SetState(52)
		p.FuncsOpt()
	}
	{
		p.SetState(53)
		p.Match(PatitoParserMAIN)
	}
	{
		p.SetState(54)
		p.Body()
	}
	{
		p.SetState(55)
		p.Match(PatitoParserEND)
	}
	{
		p.SetState(56)
		p.Match(PatitoParserEOF)
	}

	return localctx
}

// IVarsOptContext is an interface to support dynamic dispatch.
type IVarsOptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarsOptContext differentiates from other interfaces.
	IsVarsOptContext()
}

type VarsOptContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarsOptContext() *VarsOptContext {
	var p = new(VarsOptContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_varsOpt
	return p
}

func (*VarsOptContext) IsVarsOptContext() {}

func NewVarsOptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarsOptContext {
	var p = new(VarsOptContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_varsOpt

	return p
}

func (s *VarsOptContext) GetParser() antlr.Parser { return s.parser }

func (s *VarsOptContext) VarsDecl() IVarsDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarsDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarsDeclContext)
}

func (s *VarsOptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarsOptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarsOptContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterVarsOpt(s)
	}
}

func (s *VarsOptContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitVarsOpt(s)
	}
}

func (s *VarsOptContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitVarsOpt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) VarsOpt() (localctx IVarsOptContext) {
	this := p
	_ = this

	localctx = NewVarsOptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PatitoParserRULE_varsOpt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(60)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case PatitoParserVARS:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(58)
			p.VarsDecl()
		}

	case PatitoParserMAIN, PatitoParserVOID, PatitoParserLBRACE:
		p.EnterOuterAlt(localctx, 2)

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IFuncsOptContext is an interface to support dynamic dispatch.
type IFuncsOptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFuncsOptContext differentiates from other interfaces.
	IsFuncsOptContext()
}

type FuncsOptContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFuncsOptContext() *FuncsOptContext {
	var p = new(FuncsOptContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_funcsOpt
	return p
}

func (*FuncsOptContext) IsFuncsOptContext() {}

func NewFuncsOptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FuncsOptContext {
	var p = new(FuncsOptContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_funcsOpt

	return p
}

func (s *FuncsOptContext) GetParser() antlr.Parser { return s.parser }

func (s *FuncsOptContext) AllFuncDecl() []IFuncDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFuncDeclContext)(nil)).Elem())
	var tst = make([]IFuncDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFuncDeclContext)
		}
	}

	return tst
}

func (s *FuncsOptContext) FuncDecl(i int) IFuncDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFuncDeclContext)
}

func (s *FuncsOptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncsOptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FuncsOptContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterFuncsOpt(s)
	}
}

func (s *FuncsOptContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitFuncsOpt(s)
	}
}

func (s *FuncsOptContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitFuncsOpt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) FuncsOpt() (localctx IFuncsOptContext) {
	this := p
	_ = this

	localctx = NewFuncsOptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PatitoParserRULE_funcsOpt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == PatitoParserVOID {
		{
			p.SetState(62)
			p.FuncDecl()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IVarsDeclContext is an interface to support dynamic dispatch.
type IVarsDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarsDeclContext differentiates from other interfaces.
	IsVarsDeclContext()
}

type VarsDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarsDeclContext() *VarsDeclContext {
	var p = new(VarsDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_varsDecl
	return p
}

func (*VarsDeclContext) IsVarsDeclContext() {}

func NewVarsDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarsDeclContext {
	var p = new(VarsDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_varsDecl

	return p
}

func (s *VarsDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *VarsDeclContext) VARS() antlr.TerminalNode {
	return s.GetToken(PatitoParserVARS, 0)
}

func (s *VarsDeclContext) AllVarGroup() []IVarGroupContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IVarGroupContext)(nil)).Elem())
	var tst = make([]IVarGroupContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IVarGroupContext)
		}
	}

	return tst
}

func (s *VarsDeclContext) VarGroup(i int) IVarGroupContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarGroupContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IVarGroupContext)
}

func (s *VarsDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarsDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarsDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterVarsDecl(s)
	}
}

func (s *VarsDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitVarsDecl(s)
	}
}

func (s *VarsDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitVarsDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) VarsDecl() (localctx IVarsDeclContext) {
	this := p
	_ = this

	localctx = NewVarsDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PatitoParserRULE_varsDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(PatitoParserVARS)
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == PatitoParserID {
		{
			p.SetState(69)
			p.VarGroup()
		}

		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IVarGroupContext is an interface to support dynamic dispatch.
type IVarGroupContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVarGroupContext differentiates from other interfaces.
	IsVarGroupContext()
}

type VarGroupContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVarGroupContext() *VarGroupContext {
	var p = new(VarGroupContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_varGroup
	return p
}

func (*VarGroupContext) IsVarGroupContext() {}

func NewVarGroupContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VarGroupContext {
	var p = new(VarGroupContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_varGroup

	return p
}

func (s *VarGroupContext) GetParser() antlr.Parser { return s.parser }

func (s *VarGroupContext) IdList() IIdListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdListContext)
}

func (s *VarGroupContext) COLON() antlr.TerminalNode {
	return s.GetToken(PatitoParserCOLON, 0)
}

func (s *VarGroupContext) TypeSpec() ITypeSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeSpecContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeSpecContext)
}

func (s *VarGroupContext) SEMI() antlr.TerminalNode {
	return s.GetToken(PatitoParserSEMI, 0)
}

func (s *VarGroupContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VarGroupContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VarGroupContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterVarGroup(s)
	}
}

func (s *VarGroupContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitVarGroup(s)
	}
}

func (s *VarGroupContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitVarGroup(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) VarGroup() (localctx IVarGroupContext) {
	this := p
	_ = this

	localctx = NewVarGroupContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, PatitoParserRULE_varGroup)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		p.IdList()
	}
	{
		p.SetState(75)
		p.Match(PatitoParserCOLON)
	}
	{
		p.SetState(76)
		p.TypeSpec()
	}
	{
		p.SetState(77)
		p.Match(PatitoParserSEMI)
	}

	return localctx
}

// IIdListContext is an interface to support dynamic dispatch.
type IIdListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIdListContext differentiates from other interfaces.
	IsIdListContext()
}

type IdListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdListContext() *IdListContext {
	var p = new(IdListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_idList
	return p
}

func (*IdListContext) IsIdListContext() {}

func NewIdListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdListContext {
	var p = new(IdListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_idList

	return p
}

func (s *IdListContext) GetParser() antlr.Parser { return s.parser }

func (s *IdListContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(PatitoParserID)
}

func (s *IdListContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(PatitoParserID, i)
}

func (s *IdListContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(PatitoParserCOMMA)
}

func (s *IdListContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(PatitoParserCOMMA, i)
}

func (s *IdListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterIdList(s)
	}
}

func (s *IdListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitIdList(s)
	}
}

func (s *IdListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitIdList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) IdList() (localctx IIdListContext) {
	this := p
	_ = this

	localctx = NewIdListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, PatitoParserRULE_idList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(79)
		p.Match(PatitoParserID)
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == PatitoParserCOMMA {
		{
			p.SetState(80)
			p.Match(PatitoParserCOMMA)
		}
		{
			p.SetState(81)
			p.Match(PatitoParserID)
		}

		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ITypeSpecContext is an interface to support dynamic dispatch.
type ITypeSpecContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeSpecContext differentiates from other interfaces.
	IsTypeSpecContext()
}

type TypeSpecContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeSpecContext() *TypeSpecContext {
	var p = new(TypeSpecContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PatitoParserRULE_typeSpec
	return p
}

func (*TypeSpecContext) IsTypeSpecContext() {}

func NewTypeSpecContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeSpecContext {
	var p = new(TypeSpecContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PatitoParserRULE_typeSpec

	return p
}

func (s *TypeSpecContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeSpecContext) INT_KW() antlr.TerminalNode {
	return s.GetToken(PatitoParserINT_KW, 0)
}

func (s *TypeSpecContext) FLOAT_KW() antlr.TerminalNode {
	return s.GetToken(PatitoParserFLOAT_KW, 0)
}

func (s *TypeSpecContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeSpecContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeSpecContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.EnterTypeSpec(s)
	}
}

func (s *TypeSpecContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PatitoListener); ok {
		listenerT.ExitTypeSpec(s)
	}
}

func (s *TypeSpecContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PatitoVisitor:
		return t.VisitTypeSpec(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PatitoParser) TypeSpec() (localctx ITypeSpecContext) {
	this := p
	_ = this

	localctx = NewTypeSpecContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, PatitoParserRULE_typeSpec)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		_la = p.GetTokenStream().LA(1)

		if !(_la == PatitoParserINT_KW || _la == PatitoParserFLOAT_KW) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IBodyContext is an interface to support dynamic dispatch.
type IBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBodyContext differentiates from other interfaces.
	IsBodyContext()
}
